fix: do not overflow sidenav

--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -14,7 +14,7 @@
     top: 0;
     display: flex;
     min-width: var(--menu-width);
-    height: 100vh;
+    max-height: 100vh;
     flex-flow: column nowrap;
     align-items: center;
     will-change: opacity;
